Fix membership first page button heights on mobile

--- a/page-builder-styles.css
+++ b/page-builder-styles.css
@@ -151,6 +151,13 @@ input[type=checkbox] ~ label, input[type=radio] ~ label {
   user-select: none;
 }
 
+@media screen and (max-width: 400px) {
+  .en__field--NOT_TAGGED_5 label, .en__field--NOT_TAGGED_56 label, .en__field--NOT_TAGGED_57 label {
+    line-height: 1.3em !important;
+    min-height: 70px;
+  }
+}
+
 .en__field--NOT_TAGGED_5 label:hover, .en__field--NOT_TAGGED_5 input:checked ~ label, .en__field--NOT_TAGGED_5 input:hover ~ label,
 .en__field--NOT_TAGGED_56 label:hover, .en__field--NOT_TAGGED_56 input:checked ~ label, .en__field--NOT_TAGGED_56 input:hover ~ label,
 .en__field--NOT_TAGGED_57 label:hover, .en__field--NOT_TAGGED_57 input:checked ~ label, .en__field--NOT_TAGGED_57 input:hover ~ label {
@@ -331,7 +338,7 @@ input[type=checkbox] ~ label, input[type=radio] ~ label {
 
 @media screen and (max-width: 400px) {
   .en__field--ccvv {
-    width: 40%;
+    width: 40%;_
   }
 }
 
